# object-detection-poc

./: .gitignore  CLASS_FILTERING.md  CLASS_SUPPORT.md  HUNGARIAN_OPTIMIZATION.md  IMPLEMENTATION_SUMMARY.md  MAC_GPU_SETUP.md  README.md  VISUALIZATION.md  quickstart.sh  requirements-conservative.txt  requirements-py311.txt  requirements.txt  test_mac_gpu.py  upgrade_dependencies.sh  workflow.py
.github/workflows/: CI.yml
benches/: mot.rs
bindings/: MilitaryTargetDetector.cs  README.md  RealtimeDetectionExample.cs
data/: README.md  dataset.yaml
examples/: README.md
inference/: .gitignore  BUILD_VIDEO.md  Cargo.toml  KALMAN_INTEGRATION.md  KALMAN_TRACKING.md  OPENCV_SETUP.md  PARALLEL_BATCH_INTEGRATION_V2.md  README.md
inference/.cargo/: config.toml  config.toml.linux.example  config.toml.macos.example
inference/benches/: README.md  frame_pipeline.rs  image_processing.rs  object_tracking.rs  rtdetr_detection.rs  run_benchmarks.sh
inference/docs/: CUDA_SETUP.md  FP16_PERFORMANCE_GUIDE.md  NVIDIA_ORIN_SETUP.md  OPENCV_STANDARD_DEPENDENCY.md  RTDETR_BATCH_FIX.md  RTDETR_IMPLEMENTATION.md  TRACKING_OPTIMIZATIONS.md  YOLO_VS_RTDETR.md
inference/examples/: benchmark_all.rs  detect_full.rs  detect_mini.rs  detect_pipeline.rs  detect_rtdetr.rs  detect_tile_overlap.rs  detect_video.rs  detect_video_bad.rs  detect_yoloair.rs  list_metal_devices.rs  list_rocm_devices.rs  model_info.rs  test_detector.rs  test_inference.rs
inference/scripts/: monitor_gpu.sh
inference/src/: batch_executor.rs  bytetrack_operator.rs  bytetrack_tracker.rs  detector.rs  detector_onnx.rs  detector_pool.rs  detector_rtdetr.rs  detector_stub.rs  detector_trait.rs  detector_yolov8.rs  error.rs  ffi.rs  frame_executor.rs  frame_pipeline.rs  image_utils.rs  kalman_operator.rs  kalman_pool.rs  kalman_tracker.rs  lib.rs  pipeline.rs  postprocessing.rs  preprocessing.rs  realtime_pipeline.rs  tracking.rs  tracking.rs.backup  tracking_types.rs  tracking_utils.rs  types.rs  video.rs  video_pipeline.rs  video_utils.rs
inference/test_data/: README.md
ioutrack/: Cargo.toml  LICENSE  pyproject.toml
ioutrack/benches/: hungarian_bench.rs  tracking_benchmark.rs
ioutrack/examples/: test_box_multi_tracker.rs  test_hungarian.rs
ioutrack/src/: bbox.rs  box_tracker.rs  hungarian.rs  kalman.rs  lib.rs  spatial.rs
ioutrack/src/trackers/: bytetrack.rs  mod.rs  sort.rs  sorttrack.rs
scripts/: README.md  benchmark_gpu.py  check_env.sh  create_test_image.py  diagnose_detection.py  download_tank_images.py  export_batch_dual.py  export_batch_fp16.py  export_full.py  export_mini.py  export_rtdetr_batch.py  export_rtdetr_ultralytics.py  export_yoloair.py  generate_battle_scenes.py  generate_test_image.py  normalize_test_image.py  rust_inference_bridge.py  setup.sh  test_inference_visualization.py
src/: box_tracker.rs
src/trackers/: base.rs
tests/: test_tank_detection.py
training/: config.yaml  config_mac.yaml  config_mac_8gb.yaml  config_test.yaml  data.yaml  export.py  train.py  validate.py
