[package]
name = "military-target-detector"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Real-time military target detection library for cross-platform deployment"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/military-target-detector"

[lib]
name = "military_target_detector"
crate-type = ["cdylib", "rlib"]

[dependencies]
# ONNX Runtime for model inference - Latest version
onnxruntime = "0.0.14"

# Image processing - Compatible versions with onnxruntime
image = "0.25"
ndarray = "0.15"  # Match onnxruntime's ndarray version
imageproc = "0.24"  # Additional image processing utilities

# Video processing (optional, can use OpenCV bindings)
opencv = { version = "0.91", default-features = false, features = ["imgproc", "videoio", "imgcodecs"], optional = true }

# Serialization - Latest versions
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"  # Binary serialization

# Error handling - Latest versions
anyhow = "1.0"
thiserror = "1.0"

# Async runtime - Latest version
tokio = { version = "1.35", features = ["full"], optional = true }

# Logging - Enhanced logging
log = "0.4"
env_logger = "0.11"
tracing = { version = "0.1", optional = true }

# C FFI
libc = "0.2"

# Performance - Latest versions
rayon = "1.8"
parking_lot = "0.12"  # Fast synchronization primitives

# Memory management
bytes = "1.5"

# Math and numerics
nalgebra = { version = "0.33", optional = true }

# Utilities
uuid = { version = "1.6", features = ["v4"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"  # Property-based testing
tempfile = "3.8"  # Temporary files for testing

[features]
default = ["tracing", "chrono"]
gpu = []
async = ["tokio"]
math = ["nalgebra"]
utils = ["uuid", "chrono"]
tracing = ["dep:tracing"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"