[package]
name = "military-target-detector"
version = "0.1.0"
edition = "2021"
authors = ["Alexander Sorkin <alexander.sorkin@example.com>"]
description = "Real-time military target detection with ONNX Runtime and GPU acceleration"
license = "MIT OR Apache-2.0"

[lib]
name = "military_target_detector"
crate-type = ["rlib"]

[dependencies]
# ONNX Runtime - Official GPU-accelerated inference
ort = { version = "2.0.0-rc.10", features = ["half"] }

# Image processing
image = "0.25"
imageproc = "0.25"
ndarray = "0.16"

# Video processing (optional)
opencv = { version = "0.92", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
# Not needed for now

[features]
default = []
opencv = ["dep:opencv"]
metal = []  # Enable CoreML/Metal GPU acceleration on Apple platforms

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"