[package]
name = "military-target-detector"
version = "0.1.0"
edition = "2021"
authors = ["Alexander Sorkin <alexander.sorkin@example.com>"]
description = "Real-time military target detection with ONNX Runtime and GPU acceleration"
license = "MIT OR Apache-2.0"

[lib]
name = "military_target_detector"
crate-type = ["rlib"]

[dependencies]
# ONNX Runtime - Official GPU-accelerated inference
ort = { version = "2.0.0-rc.10", features = ["half"] }

# Image processing
image = "0.25.8"
imageproc = "0.25"
ndarray = "0.15.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11.8"

# Kalman filter and tracking
nalgebra = "0.30"

# ByteTrack tracking (alternative to Kalman)
ioutrack = { path = "../ioutrack" }

# Video processing (requires opencv installed via brew)
opencv = { version = "0.97.2", default-features = false, features = ["videoio", "highgui", "imgproc"] }

# Async runtime
tokio = { version = "1.48", features = ["full"] }
crossbeam = "0.8"
rayon = "1.11"

# Hungarian algorithm for data association
pathfinding = "4.14"

[dev-dependencies]
# Not needed for now

[features]
default = []
metal = []      # Enable CoreML/Metal GPU acceleration on Apple platforms
cuda = []       # Enable CUDA GPU acceleration on NVIDIA platforms
tensorrt = []   # Enable TensorRT GPU acceleration on NVIDIA platforms (optimized)

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"